--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "material-design-icons-iconfont": "^4.0.5",
     "typeface-roboto": "^0.0.54",
     "vue": "^2.6.10",
+    "vuedraggable": "^2.20.0",
     "vuetify": "^1.5.5"
   },
   "devDependencies": {
