--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -18,6 +18,7 @@
         "page": "dist/background.html"
     },
     "permissions": [
+        "<all_urls>",
         "storage"
     ],
     "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self';"
