--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "stylus-loader": "^3.0.1",
     "vue-cli-plugin-vuetify": "^0.5.0",
     "vue-template-compiler": "^2.5.21",
-    "vuetify-loader": "^1.0.5"
+    "vuetify-loader": "^1.0.5",
+    "webextension-polyfill": "^0.6.0"
   },
   "eslintConfig": {
     "root": true,
